feat: authorization for POST, PATCH, and DELETE
