# routes/places-routes.js
@@ -7,8 +7,8 @@ const fileUpload = require("../middleware/file-upload");
 const router = express.Router();
 
 router.get("/", placesControllers.getAllPlaces);
-router.get("/:pid", placesControllers.getPlaceByID);
-router.get("/user/:uid", placesControllers.getPlacesByUserID);
+router.get("/:pid", placesControllers.getPlaceById);
+router.get("/user/:uid", placesControllers.getPlacesByUserId);
 router.use(checkAuth); // request without token will not reach the bottom middlewares
 router.post(
     "/",
