# routes/users-routes.js
@@ -2,11 +2,11 @@ const express = require("express");
 const { check } = require("express-validator");
 const usersControllers = require("../controllers/users-controller");
 const fileUpload = require("../middleware/file-upload");
+const checkAuth = require("../middleware/check-auth");
 
 const router = express.Router();
 
-router.get("/", usersControllers.getUsers);
-router.get("/:uid", usersControllers.getUserById);
+
 router.post(
     "/signup",
     fileUpload.userFileUpload.single("image"),
@@ -30,5 +30,8 @@ router.post(
         .withMessage("Invalid email input"),
     usersControllers.login
 );
+router.use(checkAuth);
+router.get("/", usersControllers.getUsers);
+router.get("/:uid", usersControllers.getUserById);
 
 module.exports = router;
